config-management/policies/ns-require-label-owner.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-require-label-owner
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
      - "kube-*"
      - "config-management-monitoring"
      - "config-management-system"
      - "istio-system"
      - "gatekeeper-system"
      - "resource-group-system"
      - "asm-system"
  parameters:
    labels:
      - key: "owner"
